# doc-test

./: .env  .env.default  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Pipfile  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/about/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/about/: index.html
1.0.1/code/: index.html
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/about/: index.html
1.0.2/code/: index.html
1.0.2/stylesheets/: extra.css
1.0.3/: 404.html  index.html  sitemap.xml
1.0.3/about/: index.html
about/: index.html
app/: config.py  database.py  log.py  main.py  models.py
app/models/: item.py
app/routers/: item.py
app/utils/: log.py
docs/: about.md  code.md
latest/: 404.html  index.html  sitemap.xml
latest/about/: index.html
latest/code/: index.html
scripts/: format.sh  lint.sh  test.sh
search/: search_index.json
tests/: test_config.py  test_main.py  test_routers.py
